correct text-alignment in Location

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,3 +1,8 @@
+html {
+  font-size: 18px;
+}
+
+
 @media only screen and (max-width:1024px;) {
   .mobile-nav {
     display: block;
@@ -172,8 +177,7 @@ h1 {
     padding-left: 2rem;
     padding-top: 1rem;
     padding-bottom: 1rem;
-    text-align: center;
-
+    text-align: left;
 }
 
 .location span {
